# Ai.os

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eval_agent.py  pyproject.toml
.github/workflows/: ci.yml  eval.yml  publish.yml
aios/: __init__.py  agent.py  config.py  scheduling.py  secrets.py  triggers.py
aios/bus/: store.py
aios/cli/: main.py  templates.py
aios/eval/: runner.py
aios/identity/: __init__.py  core.py
aios/mcp/: server.py
aios/memory/: store.py
aios/models/: __init__.py  router.py
aios/runtime/: __init__.py  checkpoint.py  process.py
aios/tools/: __init__.py  registry.py
aios/tools/builtin/: __init__.py  discord.py  email.py  filesystem.py  github.py  http.py  linear.py  notion.py  postgres.py  shell.py  slack.py  web.py
aios/web/: app.py
examples/: coder.py  github_reviewer.py  monitor.py  notifier.py  pipeline.py  researcher.py  triage.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/examples/: researcher.ts
sdk/typescript/src/: agent.ts  checkpoint.ts  index.ts  memory.ts  schedule.ts  tool.ts  types.ts
tests/: conftest.py  test_agent.py  test_aios_test_cmd.py  test_builtin_tools.py  test_checkpoint.py  test_cli_cp_timeline_runs.py  test_cli_export_import.py  test_cli_memory_write.py  test_deploy.py  test_eval_runner.py  test_mcp_server.py  test_memory.py  test_message_bus.py  test_observability.py  test_secrets.py  test_snapshot_rollback.py  test_tool_cache_ttl.py  test_tool_retries.py  test_tools.py  test_triggers.py  test_workspace.py
