[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aios-runtime"
version = "0.2.0"
description = "Persistent agent runtime. Deploy agents that remember, survive crashes, and run forever."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "agents", "llm", "autonomous", "runtime", "persistence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "litellm>=1.40.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "aiosqlite>=0.20.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "watchfiles>=0.22.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
secrets = ["cryptography>=42.0.0"]
mcp = ["uvicorn[standard]>=0.30.0"]
all = ["asyncpg>=0.29.0", "cryptography>=42.0.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
aios = "aios.cli.main:app"

[project.urls]
Homepage = "https://github.com/kolan51/Ai.os"
Repository = "https://github.com/kolan51/Ai.os"
Issues = "https://github.com/kolan51/Ai.os/issues"

[tool.hatch.build.targets.wheel]
packages = ["aios"]

[tool.ruff]
line-length = 220
target-version = "py310"
exclude = ["aios/web/app.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E741"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
disallow_any_generics = false
warn_return_any = false
check_untyped_defs = false
disable_error_code = [
  "type-arg",
  "no-any-return",
  "no-untyped-def",
  "no-untyped-call",
  "index",
  "arg-type",
  "call-overload",
  "return-value",
  "misc",
  "call-arg",
  "no-redef"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
